things_to_import/no_duplication.txt

ModuleNotFoundError: No module named 'pylhe'

  File "<string>", line 1
    from model.GravNet import *import torch_geometric.nn as PyG
                               ^
SyntaxError: invalid syntax
